
* Release history

** Main branch change

** 1.21
- Chore: Enhance ai-code-send-command to support multi-level context inputs
- Fix: Start AI CLI with Kiro-cli backend leads to error, reported by texastony
- Fix: Silence notifications-notify native compile warning, by Silex

** 1.20
- Feat: Add ai-code-claude-code.el, a built-in Claude Code backend using ai-code-backends-infra (no external package required)
- Feat: Add desktop notification support for AI response completion (experimental), suggested and reviewed by Silex
- Fix: Couple of bugs inside ai-code-prompt-mode.el, reported and fix suggested by lesteral

** 1.01
- Chore: C-u on ai-code-cli-start will prompt user to enter CLI args
- Feat: Better support for task management
- Fix: ai-code--setup-snippets silently fails, reported by lesteral

** 1.00
- Fix: add back multiple session support
- Feat: add kiro-cli support, by jenkinsjb
- Feat: add cursor-cli support, by donneyluck

** 0.91
- Fix: Weird ai-code-backends-infra.el loading bug, by Silex, and opencode start issue, by e665107
- Feat: Integrate Gemini CLI into ai-code-backends-infra, removing dependency on external gemini-cli.el package.

** 0.90
- Feat: Add ai-code-backends-infra.el, use it as infrastructure for
  - OpenAI Codex
  - GitHub Copilot CLI
  - Opencode
  - Grok CLI
- Feat: Add ai-code-build-project, let AI build the project
- Chore: Add AI-assisted test run fallback for running tests

** 0.82
- Chore: ai-code-take-notes prioritize to put note to visible org buffers in current frame
  - Refactor ai-code-take-notes to smaller functions
- Feat: Support cross git repo context adding 
- Chore: Add __pycache__ to default gitignore file patterns

** 0.81
- Fix: a couple of opencode related config / command

** 0.80
- Published to MELPA, update README and package description

** 0.74
- Feat: Add ai-code-insert-function-at-point, it is useful during writing TODO comment, to implement a feature referring to an existing function, from visible buffers